# pretty-little-link

./: .gitignore  Cargo.toml  DEVLOG.md  README.md  docker-compose.yml
backend/: .env  Cargo.toml  Dockerfile
backend/src/: errors.rs  lib.rs  main.rs  models.rs
backend/src/routes/: links.rs  mod.rs
backend/src/services/: shortener.rs
backend/tests/: health_check.rs  links.rs
backend/tests/common/: mod.rs
frontend/: Dockerfile  index.html  package-lock.json
frontend/link_shortener_frontend/: package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Header.jsx  ResultDisplay.jsx  URLForm.jsx
frontend/src/hooks/: useShortener.js
frontend/src/services/: api.js
migrations/: 20250609000736_create_links_table.sql
src/: errors.rs  lib.rs  main.rs  models.rs
src/routes/: health.rs  links.rs  mod.rs
src/services/: shortener.rs
